--- a/infrastructure/adapter-rest/JavaJaxRS/spec/pojo.mustache
+++ b/infrastructure/adapter-rest/JavaJaxRS/spec/pojo.mustache
@@ -1,4 +1,5 @@
 import java.util.Objects;
+import java.util.Date;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonValue;
