--- a/infrastructure/adapter-rest/JavaJaxRS/spec/api.mustache
+++ b/infrastructure/adapter-rest/JavaJaxRS/spec/api.mustache
@@ -41,7 +41,7 @@ import javax.validation.constraints.*;
 import javax.validation.Valid;
 {{/useBeanValidation}}
 
-@Path("{{commonPath}}"){{#useSwaggerAnnotations}}
+@Path("{{basePathAPI}}/{{baseName}}"){{#useSwaggerAnnotations}}
 @Tag(description = "the {{{baseName}}} API"){{/useSwaggerAnnotations}}{{#hasConsumes}}
 @Consumes({ {{#consumes}}"{{{mediaType}}}"{{^-last}}, {{/-last}}{{/consumes}} }){{/hasConsumes}}{{#hasProduces}}
 @Produces({ {{#produces}}"{{{mediaType}}}"{{^-last}}, {{/-last}}{{/produces}} }){{/hasProduces}}
@@ -96,10 +96,10 @@ import javax.validation.Valid;
                     url = "{{licenseUrl}}")),    
     {{#hasAuthMethods}}security = @SecurityRequirement(name = "{{authMethods.0.name}}"{{/hasAuthMethods}}))
 {{>generatedAnnotation}}
-public abstract {{#interfaceOnly}}interface{{/interfaceOnly}}{{^interfaceOnly}}class{{/interfaceOnly}} {{classname}} {
+public {{#interfaceOnly}}interface{{/interfaceOnly}}{{^interfaceOnly}}abstract class{{/interfaceOnly}} {{classname}} {
 {{#operations}}
 {{#operation}}
-{{#interfaceOnly}}{{>apiInterface}}{{/interfaceOnly}}{{^interfaceOnly}}{{>apiMethod}}{{/interfaceOnly}}
+{{>apiMethod}}
 {{/operation}}
 }
 {{/operations}}
